# idkWM

./: .xinit_test  README.md  config.json
src/: main.cpp  meson.build  run.sh
src/idkWM/: config_parser.cpp  config_parser.hpp  events.cpp  events.hpp  idkWM.cpp  idkWM.hpp  log.cpp  log.hpp  tiling.cpp  tiling.hpp  types.hpp
